--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# local env files
-.env*.local
-env
 .env
-.env.local
+/.venv
