--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 OPENAI_API_KEY=your_openai_key
 BING_SEARCH_V7_SUBSCRIPTION_KEY=your_bing_key
 GRADIO_ALLOW_FLAGGING=never
+GOOGLE_API_KEY=your_google_key
+STABILITY_API_KEY=your_stability_key
