--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ BING_SEARCH_V7_SUBSCRIPTION_KEY=your_bing_key
 GRADIO_ALLOW_FLAGGING=never
 GOOGLE_API_KEY=your_google_key
 STABILITY_API_KEY=your_stability_key
+ANTHROPIC_API_KEY=your_anthropic_key
