--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ GRADIO_ALLOW_FLAGGING=never
 GOOGLE_API_KEY=your_google_key
 STABILITY_API_KEY=your_stability_key
 ANTHROPIC_API_KEY=your_anthropic_key
+FLUX_API_KEY=your_flux_key
